--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "atomic wallet token distribution app",
   "main": "init.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint --ext js .",
+    "lint:fix": "./node_modules/.bin/eslint --ext js --fix ."
   },
   "author": "LAkhn",
   "license": "MIT",
@@ -14,5 +16,9 @@
     "fast-csv": "^2.4.1",
     "nodejs-argv": "^1.0.2",
     "web3": "^1.0.0-beta.36"
+  },
+  "devDependencies": {
+    "@atomix/eslint-config": "^6.4.0",
+    "eslint": "^4.19.1"
   }
 }
