--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "atomic wallet token distribution app",
   "main": "init.js",
   "scripts": {
+    "start": "node init.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint --ext js .",
     "lint:fix": "./node_modules/.bin/eslint --ext js --fix ."
